--- a/index.html
+++ b/index.html
@@ -4,56 +4,126 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Akshay Kaushik </title>
+    <title>My Portfolio</title>
 </head>
 
 <body>
     <h1>Akshay Kaushik</h1>
-    <img src="assets\Profile.webp" alt="Profile Picture">
     <hr>
-    <h2>Ph no - 9380838591</h2>
-    <h2>Email ID - akshay.kaushik229@gmail.com</h2> </body> </html>
+    <I><b>Creative / Determined / Ambitious</b></I>
+    <br>
+    <br>
+    <img src="assets\profile picture.jpg" alt="Profile picture">
     <hr>
-    <h3>Introduction</h3>
-    <p>Hi, I’m Akshay Kaushik, a passionate and ambitious individual driven by curiosity, creativity, and the desire to
-        build impactful solutions. I believe that the world is full of possibilities, and I strive to explore them
-        through constant learning, experimentation, and innovation. <br> 
-        <br>
-        I have a strong interest in technology, startups, freelancing, and game development, and I’m on a journey to
-        transform my ideas into reality. I see technology as more than just tools — to me, it’s a way to solve
-        real-world problems, create value, and make a difference. Whether it’s designing apps, developing games, or
-        brainstorming startup ideas, I enjoy taking on challenges and turning imagination into something tangible.
-        <br> 
-        <br> Currently, I’m focused on learning, building, and growing. I believe in self-driven education and love
-        exploring
-        emerging technologies. My journey has already introduced me to fields like software development, AI, game
-        engines, and no-code platforms like Bubble, where I’m experimenting with creating a supportive social platform
-        to bring people together and make a positive impact.
+    <h2>Summary</h2>
+    <p>
+        "Hey I'm Akshay Kaushik, a passionate and creative individual with a strong drive to explore
+        and innovate across diverse fields. Quick to learn and adapt, with
+        a growing expertise in technology, content creation, and problem-solving.
+        Skilled at thinking outside the box and staying updated with emerging trends
+        to deliver fresh, impactful ideas. Committed to personal growth and excellence,
+        with a positive mindset and a determination to achieve ambitious goals."
     </p>
     <hr>
-    <h3>Educational Qualification</h3>
-    <dl>
-        <dt>Bachelor of Technology (B.Tech) in Mechanical Engineering (2024 – Present)
-            BMS College of Engineering, Bengaluru</dt>
+    <h2>Educational Qualification</h2>
 
-        <dd>Currently pursuing my 1st year of B.Tech, gaining foundational knowledge in mechanical systems, engineering
-            principles, and applied sciences. Actively exploring opportunities to expand my expertise beyond academics,
-            particularly in technology, startups, and freelancing.</dd>
-             <br>
+    <ol>
+        <li>Bachelor of Technology (B.Tech) in Mechanical Engineering (2024 – Present)
+            BMS College of Engineering, Bengaluru</li>
+        <ul>
+            <li>Currently pursuing my 1st year of B.Tech, gaining foundational knowledge in mechanical systems,
+                engineering
+                principles, and applied sciences. Actively exploring opportunities to expand my expertise beyond
+                academics,
+                particularly in technology, startups, and freelancing.</li>
+        </ul>
+        <br>
 
-        <dt>Pre-University Course (PUC) – Class 12 (2022 – 2024)
-            [Vedantha PU College]</dt>
-        <dd>Completed my Class 12 with a focus on Physics, Chemistry, Mathematics, and Biology, building strong
-            analytical and problem-solving skills.</dd> 
-            <br>
+        <li>Pre-University Course (PUC) – Class 12 (2022 – 2024)
+            [Vedantha PU College]</li>
+        <ul>
+            <li>Completed my Class 12 with a focus on Physics, Chemistry, Mathematics, and Biology, building strong
+                analytical and problem-solving skills.</li>
+        </ul>
+        <br>
 
-        <dt>Secondary Education – Class 10 (2021 – 2022)
-            [Global Academy For Learning]</dt>
-        <dd>Successfully completed my Class 10, establishing a solid foundation in science, mathematics, and logical
-            reasoning.</dd>
-    </dl>
+        <li>Secondary Education – Class 10 (2021 – 2022)
+            [Global Academy For Learning]</li>
+        <ul>
+            <li>Successfully completed my Class 10, establishing a solid foundation in science, mathematics, and logical
+                reasoning.</li>
+        </ul>
+    </ol>
     <hr>
-    <h3>Skills</h3>
+    <h2>Skills</h2>
+    <ol>
+        <li>Technical Skills</li>
+
+        <ul>
+            <li>Knowledge of HTML, CSS, and basic
+                JavaScript for web development
+            </li>
+            <li>Familiarity with Git and GitHub for project
+                management and collaboration
+            </li>
+            <li>Understanding of responsive web design for seamless
+                multi-device experiences
+            </li>
+            <li>Exploring React.js to build modern and dynamic web
+                applications</li>
+        </ul> <br>
+        <li>Soft Skills</li>
+        <ul>
+            <li>Passionate about continuous learning and exploring new technologies</li>
+            <li>Strong analytical thinking and problem-solving abilities</li>
+            <li>Focused on user experience when designing solutions</li>
+            <li>Clear and effective communication skills for teamwork and collaboration</li>
+            <li>Highly adaptable to new tools, trends, and environments</li>
+        </ul>
+    </ol>
+    <hr>
+    <h2>Projects & Learning Experience</h2>
+    <ol>
+        <li>Web Development Practice (2025)</li>
+        <ul>
+            <li>Built small projects using HTML and CSS to strengthen website structuring skills</li>
+            <li>Practiced responsive design techniques to ensure smooth cross-device compatibility</li>
+            <li>Learning JavaScript to add interactivity and dynamic elements to web pages</li>
+        </ul> <br>
+        <li>Content Creation & Storytelling (2021 – Present)</li>
+        <ul>
+            <li>Created engaging digital content and experimented with visual storytelling</li>
+            <li>Gained hands-on experience in design thinking and creative presentation techniques</li>
+            <li>Developing a freelancing mindset by exploring ways to monetize creative and technical skills</li>
+        </ul> <br>
+        <li>F-22 Raptor RC Aircraft (Personal Project, 2025)</li>
+        <ul>
+            <li>Designed and built a working RC model of the F-22 Raptor from scratch</li>
+            <li>Learned about aerodynamics, weight distribution, thrust mechanisms, and control surfaces</li>
+            <li>Gained hands-on experience in electronics integration, servo motor control, and battery-powered
+                propulsion</li>
+            <li>Enhanced problem-solving and engineering design skills through iterative testing</li>
+        </ul>
+
+    </ol>
+    <hr>
+    <h2>My Projects</h2>
+    <p>These are some of the projects I have worked on to explore my interests and apply what I have learned. Each
+        project reflects my curiosity, creativity, and problem-solving skills while giving me hands-on experience in
+        building and designing practical solutions.</p>
+    <ul>
+        <li>Created a Tech Glossary using basic HTML tags to practice structuring content and designing a clean layout.
+        <a href="./Projects/Project 6/">Tech Glossary Project</a></li>
+        <li>Created a simple Recipe web page using basic HTMl tags <a href="./Projects/Project 5/">Simple Recipe Project</a></li>
+        <li>Here is all the other projects that I have worked using basic HTML tags <a href="./Projects/">All Projects</a></li>
+    </ul>
+    <h2>Contact Me</h2>
+    <ul>
+        <li>Contact no - +91 93808 38591</li>
+        <li>Email ID - akshaykaushik229@gmail.com</li>
+        <li>Git Hub - <a href="https://github.com/dashboard">https://github.com/dashboard</a> </li>
+        <li>LinkedIn - <a href="https://www.linkedin.com/">LinkedIn,com </a></li>
+    </ul>
 </body>
 
 </html>
