--- a/index.html
+++ b/index.html
@@ -113,10 +113,11 @@
         building and designing practical solutions.</p>
     <ul>
         <li>Created a Tech Glossary using basic HTML tags to practice structuring content and designing a clean layout.
-        <a href="./Projects/Project 6/">Tech Glossary Project</a></li>
-        <li>Created a simple Recipe web page using basic HTMl tags <a href="./Projects/Project 5/">Simple Recipe Project</a></li>
-        <li>Here is all the other projects that I have worked using basic HTML tags <a href="./Projects/">All Projects</a></li>
+        <a href="./Projects/Project 6/Project2_Akshay_difficult.html">Tech Glossary Project</a></li>
+        <li>Created a simple Recipe web page using basic HTMl tags <a href="./Projects/Project 5/Project2_Akshay_medium.html">Simple Recipe Project</a></li>
+        <li>Here is all the other projects that I have worked using basic HTML tags <a href="projects.html">All Projects</a></li>
     </ul>
+    <hr>
     <h2>Contact Me</h2>
     <ul>
         <li>Contact no - +91 93808 38591</li>
